# xscript

./: .gitignore  CMakeLists.txt  file.ts  main.cpp
functions/: Function.cpp  Function.h
handler/: Block.cpp  Block.h  Handler.cpp  Handler.h
reader/: Reader.cpp  Reader.h
utils/: Tree.cpp  Tree.h  string.cpp  string.h
variables/: BigInt.cpp  Boolean.cpp  Boolean.h  Null.cpp  Null.h  Number.cpp  Number.h  String.cpp  String.h  Undefined.cpp  Undefined.h  Variable.cpp  Variable.h
